 * Updated Unit Cooldown icons for all cooldown resets in MoP.
 * DR categories should now be complete for MoP. Please report any missing spells.
 * You can once again toggle config mode in combat. You may still get script ran too long errors if TellMeWhen_Options has not been loaded yet and you unlock in combat,  but it won't break anything.
 * You can now reorder groups.
 * Bug fixes:
 ** Fixed static formats again (ICONMENU_MULTISTATECD_DESC)
 ** (Condition ROLE): attempt to index global "roles" (a nil value)
 ** Buff/debuff duration sorting actually works now!
 ** TellMeWhen_Options.lua:3351: attempt to index local "settingsUsedByEvent" (a nil value)
 ** Announcements.lua:531: attempt to concatenate local "Text" (a nil value)
 ** Leader of the Pack should now be properly checked by the IncreasedCrit equivalency
 ** Fixed a major flaw with importing profiles from backup or from other profiles in the db
 ** (Condition THREATRAW): attempt to call global 'UnitDetailedThreatSituation' (a nil value)
 ** Fixed cooldown resetting with unitcooldown icons. Spells still not really updated for MoP
 ** Fixed a bug where colors weren't being updated when the duration of an icon changes. Colors still suck, but at least they should work (better) now.
 ** Fixed a bag bug that will completely break most configuration after cloning a text layout
 ** Fixed a bug where profiles of version 60032 or earlier could not be imported by version 60033 or later.
 ** Fixed an error caused by dragging certain talents/specialization spells onto icons.
 ** Wrote a library (LibSpellRange-1.0) to solve the range checking problem in MoP.
 ** Texts.lua line 438: attempt to compare nil with number - Fixed for real this time!
 
===v6.0.2===
 * Cooldown icons should now provide much better functionality when checking multiple spells. Single-spell functionality should (hopefully) remain unchanged.